--- a/package.json
+++ b/package.json
@@ -12,10 +12,6 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    
-  
-    "@framer-motion": "^11.0.0",
-    
     "@genkit-ai/googleai": "^1.14.1",
     "@genkit-ai/next": "^1.14.1",
     "@hookform/resolvers": "^4.1.3",
@@ -46,10 +42,11 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "^11.2.12",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
+    "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
